adding some finishing touches

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -4889,6 +4889,24 @@
     "store_df.to_csv('../data/store.csv')\n",
     "pickle_handler.save_data('../data/data_exploration.pkl')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# writing to database\n",
+    "try:\n",
+    "    print('writing to the database')\n",
+    "    frame = train_merged_df.to_sql(\n",
+    "        \"train_data\", con=engine, if_exists='replace')\n",
+    "except Exception as e:\n",
+    "  print(\"Error writing to database: \", e)\n",
+    "writing to the database\n",
+    "# reading from database\n",
+    "pd.read_sql(\"select * from pharmacutical.train_data\", engine)"
+   ]
   }
  ],
  "metadata": {
